WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216800
[GPU Process] Several tests in canvas/philip/tests are failing with text diffs
https://bugs.webkit.org/show_bug.cgi?id=216800
Summary
[GPU Process] Several tests in canvas/philip/tests are failing with text diffs
Wenson Hsieh
Reported
2020-09-21 13:42:44 PDT
To reproduce: run-webkit-tests --release canvas/philip/tests --use-gpu-process I’ll be using this bug to track these failures, which all share a similar root cause: canvas/philip/tests/2d.gradient.radial.cone.shape2.html [ Failure ] canvas/philip/tests/2d.pattern.basic.nocontext.html [ Failure ] canvas/philip/tests/2d.pattern.paint.norepeat.coord3.html [ Failure ] canvas/philip/tests/2d.pattern.paint.repeatx.coord1.html [ Failure ] canvas/philip/tests/2d.pattern.paint.repeatx.outside.html [ Failure ] canvas/philip/tests/2d.pattern.paint.repeaty.coord1.html [ Failure ] canvas/philip/tests/2d.pattern.paint.repeaty.outside.html [ Failure ]
Attachments
Patch
(4.46 KB, patch)
2020-09-21 14:22 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-09-21 14:22:21 PDT
Created
attachment 409321
[details]
Patch
Wenson Hsieh
Comment 2
2020-09-21 16:13:23 PDT
Comment on
attachment 409321
[details]
Patch Thanks for the review!
EWS
Comment 3
2020-09-21 16:25:30 PDT
Committed
r267382
: <
https://trac.webkit.org/changeset/267382
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409321
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-09-21 16:26:16 PDT
<
rdar://problem/69334895
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug